# lighthouse

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  LICENCE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  release.yml  test.yml
docs/: CONTRIBUTING.md  architecture.md  data_model.md  health-checks.md  index.md  migration-plan.md  models.md  proxy-manager.md  storage.md  theme.md
docs/assets/: highlight.css  highlight.js
docs/assets/css/: codehilite.css
docs/getting-started/: quickstart.md
docs/how-to/: embed-worker.md  health-sweeps.md  lifecycle-hooks.md  postgres-adapter.md
docs/reference/: bootstrap.md  proxy-manager.md
docs/stylesheets/: extra.css
examples/postgres/: README.md  __init__.py  adapter.py  docker-compose.yml  requirements.txt  tables.py
examples/postgres/migrations/: 0001_init.sql  0002_selector_state.sql
getting-started/quickstart/: index.html
health-checks/: index.html
how-to/embed-worker/: index.html
how-to/health-sweeps/: index.html
how-to/lifecycle-hooks/: index.html
how-to/postgres-adapter/: index.html
models/: index.html
proxy-manager/: index.html
reference/bootstrap/: index.html
reference/proxy-manager/: index.html
scripts/: generate_release_notes.py
search/: search_index.json
src/lighthouse/: __init__.py  health.py  manager.py  models.py  storage.py
src/lighthouse/storage/: __init__.py  in_memory.py  interface.py
src/lighthouse/utils/: __init__.py  bootstrap.py
src/pharox/: __init__.py  async_helpers.py  health.py  manager.py  models.py
src/pharox/storage/: in_memory.py  interface.py
src/pharox/storage/postgres/: __init__.py  adapter.py  tables.py
src/pharox/tests/: __init__.py  adapters.py
src/pharox/utils/: __init__.py  bootstrap.py
storage/: index.html
tests/: conftest.py  test_async_helpers.py  test_health.py  test_manager.py  test_manager_integration.py  test_manager_retry.py  test_models.py  test_storage_contract_inmemory.py  test_storage_contract_postgres.py  test_utils_bootstrap.py
theme/: index.html
