[tool.poetry]
name = "lighthouse"
version = "0.1.0"
description = "A modern library for managing, leasing, and monitoring proxy pools."
readme = "README.md"
license = "MIT"
repository = "https://github.com/fzaca/lighthouse"
packages = [{ include = "lighthouse", from = "src" }]
authors = ["fzaca zaca03zaca@gmail.com"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.11.7"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1"
ruff = "^0.1.6"
pre-commit = "^3.5"
mypy = "^1.7"
commitizen = "^4.8.3"
ipdb = "^0.13.10"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.0"
mkdocs-shadcn = "^0.5.0"

[tool.ruff]
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "D",  # pydocstyle
]
ignore = [
    "D203", # Conflicts with D211
    "D212", # Conflicts with D213
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in __init__
]
[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.isort]
known-first-party = ["lighthouse"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src/lighthouse --cov-report=term-missing"
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
